[package]
name = "gsm0710"
version = "0.1.0"
edition = "2021"
authors = ["magicWenli <yxnian@outlook.com>"]
description = "A library for parsing GSM 07.10 Frame"
respository = "https://github.com/magicwenli/gsm0710"

[dependencies]
bitfield-struct = "0.8.0"
clap = { version = "4.5.9", features = ["derive"] }
crc = "3.2.1"
hex = "0.4.3"
